--- a/style.css
+++ b/style.css
@@ -188,13 +188,10 @@ img {
   width: 100%;
   height: 150px;
   transition: 0.2s ease;
-  /* object-fit: cover; */
 }
 
 .listings .card img:hover {
   border-radius: 50%;
-  /* border: 2px solid black; */
-  /* opacity: .5; */
 }
 
 .consonants {
@@ -343,7 +340,7 @@ img {
   background: rgba(0, 0, 0, 0.7);
   display: none;
   z-index: 2000;
-  transform: scale(2);
+  transform: scale(1.8);
 }
 
 .modal-popup-content {
@@ -351,7 +348,7 @@ img {
   width: 30%;
   left: 50%;
   top: 50%;
-  background: white;
+  background: black;
   transform: translate(-50%, -50%);
 }
 
